# ROS_steeringCarSimulation

./: .gitignore  README.md  commands.txt
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: car_description.pc  first_attempt.pc  robot_model_pkg.pc  steering_car.pc
devel/share/car_description/cmake/: car_descriptionConfig.cmake
devel/share/first_attempt/cmake/: first_attemptConfig.cmake
devel/share/robot_model_pkg/cmake/: robot_model_pkgConfig.cmake
devel/share/steering_car/cmake/: steering_carConfig.cmake
src/car_description/: CMakeLists.txt  package.xml
src/car_description/launch/: view_car.launch  view_car.rviz
src/car_description/urdf/: car.xacro
src/first_attempt/: CMakeLists.txt  package.xml
src/robot_model_pkg/: CMakeLists.txt
src/robot_model_pkg/config/: controllers.yaml
src/robot_model_pkg/launch/: gazebo.launch  gazebo2.launch  view_car.launch
src/robot_model_pkg/scripts/: steer_control.py
src/robot_model_pkg/urdf/: car.xacro  hover.xacro  marieta.xacro
src/steering_car/: CMakeLists.txt  package.xml
src/steering_car/config/: controllers.yaml
src/steering_car/launch/: gazebo.launch  view_car.launch  view_car.rviz
src/steering_car/scripts/: car_vision_control.py  collision_detection.py  steer_control.py
src/steering_car/urdf/: car.xacro
src/steering_car/worlds/: car_path_world.world  car_path_world_last.world  see.world
