<?xml version="1.0"?>
<package format="2">
  <name>steering_car</name>
  <version>0.0.0</version>
  <description>A ROS package for a simulated car with keyboard and vision-based control in Gazebo.</description>

  <maintainer email="luska@todo.todo">luska</maintainer>
  <license>TODO</license> <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_msgs</depend>

  <export>
  </export>
</package>